name:                rtf
version:             0.1.0.0
synopsis:            Generic testing framework for FRP systems
-- description:
license:             MIT
license-file:        LICENSE
author:              Matthew Wade
maintainer:          mattie9875@hotmail.co.uk
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rtf
  main-is: Main.hs
  build-depends:       base >=4.7 && <4.9,
                       random >= 1.1 && <1.2,
                       containers >=0.5 && <0.6,
                       transformers >=0.5 && <0.6,
                       netwire >=5.0 && <5.1
  default-language:    Haskell2010
